# solana-ua-bootcamp-2024-08-06

./: .gitignore  package-lock.json  package.json
practice-4/: key-grinder.ts  send-sol.ts
practice-5/: create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint-tokens.ts
practice-6/create-token-account/: Cargo.toml
practice-6/create-token-account/src/: main.rs
practice-6/create-token-metadata/: Cargo.toml
practice-6/create-token-metadata/src/: main.rs
practice-6/create-token-mint/: Cargo.toml
practice-6/escrow/: Anchor.toml  package.json
practice-6/escrow/programs/escrow/src/: lib.rs
practice-6/escrow/programs/escrow/src/instructions/: initialize.rs  make_offer.rs  take_offer.rs
practice-6/escrow/tests/: escrow.test.ts
practice-6/send-sol/: Cargo.toml
practice-aditional/create-token-mint/src/: main.rs
practice-aditional/generate_keypair/: Cargo.toml
practice-aditional/generate_keypair/src/: main.rs
practice-aditional/mint-tokens/: Cargo.toml
practice-aditional/mint-tokens/src/: main.rs
practice-aditional/send-sol/src/: main.rs
