[package]
name = "create-token-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.10.0"
solana-program = "1.10.0"
solana-sdk = "1.10.0"
mpl-token-metadata = "4.1.2"  # Оновлюємо до останньої стабільної версії
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"